portugal open feedback for restaurant

--- a/scoresheets/Restaurant.tex
+++ b/scoresheets/Restaurant.tex
@@ -17,7 +17,10 @@
 	\scoreitem[2]{200}{Use an unattached tray to transport}
 	
 	\scoreheading{Regular Penalties}
-	\penaltyitem[2]{100}{Not making eye-contact when taking an order}
+	\penaltyitem[2]{80}{Not making eye-contact when taking an order}
+	\penaltyitem[2]{80}{Not reaching the bar (barman has to move from behind the bar to interact with the robot)}
+	\penaltyitem[2]{80}{Using custom operator}
+
 
 	\scoreheading{Deus ex Machina Penalties}
 	\penaltyitem[2]{200}{Being guided to a table}
