--- a/tasks/Restaurant.tex
+++ b/tasks/Restaurant.tex
@@ -73,7 +73,7 @@ This task focuses on
 		\item The robot can either transport each object individually, or using a tray. All delivered objects must be placed on the customer's table.
 		\item For transport with an unattached tray, the robot must pick up the objects and place them on a tray, pick up the tray, and then place the objects from the tray on the table (first placing the tray on the table is allowed).
 		\item If requested, the barman will place the order in a basket or tray for the robot to deliver it.
-		\item Upon arrival to the restaurant, only the team leader is allowed next to the robot for watching and charging.
+		\item Upon arrival to the restaurant, only two team members are allowed next to the robot for watching and charging.
 		\item If a person from the audience (severely) interferes with the robot in a way that makes it impossible to solve the task, the teams may repeat the test immediately.
 		\item Each Deus Ex Machina penalty for skipping manipulation will only be applied twice per order so receiving an order with three objects is not more punishing.
 		\item If the robot detects a customer but does not reach their table, the robot must clearly show who was detected to receive points, i.e. displaying a picture of the person.
